Hotfix: - fixed laptop content margin on mobile

--- a/components/LaptopContent/laptop-content.module.css
+++ b/components/LaptopContent/laptop-content.module.css
@@ -45,3 +45,9 @@
     font-size: 1.2em;
     transform-origin:0 calc(var(--radius));
 }
+
+@media only screen and (max-width: 640px) {
+    .circle {
+          margin-bottom: 35px;
+    }
+}
